--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>HPBD ThaoPhuong</title>
+  <title>Title</title>
   <link rel="stylesheet" href="./css/style.css" type="text/css" media="screen" />
-  <link rel="shortcut icon" type="images/x-icon" href="./css/images/8.ico">
+  <link rel="shortcut icon" type="images/x-icon" href="./css/images/a8.ico">
 </head>
 
 <body>
@@ -14,13 +14,13 @@
     <!-- #ffc0cb73 -->
     <marquee behavior="left" direction="" scrollamount="10">
       <p style="font-size: 20px; font-weight: bold;">
-        <img src="./css/images/13.ico" alt="" style="width: 25px; height: 25px;">
-        <span style="color: #00c4dd;">Chúc mừng sinh nhật Thảo 17/11/2000, chúc em luôn mạnh khỏe, gặp nhiều may mắn và thành công trong cuộc sống !!!</span>
-        <img src="./css/images/13.ico" alt="" style="width: 25px; height: 25px;">
-        <span style="color: #00000095;">&nbsp; Design by: Trần Văn Dũng</span> 
-        <img src="./css/images/Gift_Icon_64.png" alt="" style="width: 45px; height: 45px;">
-        <img src="./css/images/Gift_Icon_64.png" alt="" style="width: 45px; height: 45px;">
-        <img src="./css/images/Gift_Icon_64.png" alt="" style="width: 45px; height: 45px;">
+        <img src="./css/images/a13.ico" alt="" style="width: 25px; height: 25px;">
+        <span style="color: #00c4dd;">Tiêu đề mở đầu nên dài tối thiểu 20 từ cho chữ hiện thị rõ hơn trên nền !!!</span>
+        <img src="./css/images/a13.ico" alt="" style="width: 25px; height: 25px;">
+        <span style="color: #00000095;">&nbsp; Design by: Trần Văn A</span> 
+        <img src="./css/images/64.png" alt="" style="width: 45px; height: 45px;">
+        <img src="./css/images/64.png" alt="" style="width: 45px; height: 45px;">
+        <img src="./css/images/64.png" alt="" style="width: 45px; height: 45px;">
       </p>
     </marquee>
     <div class="controls" style="text-align: center;">
